# anti-theft-monitor

./: CMakeLists.txt  README.md  sdkconfig
components/controller/: CMakeLists.txt  controller.cpp  controller.h  gprs_controller.cpp  tcp_controller.cpp
components/event_monitor/: CMakeLists.txt  event_monitor.cpp  event_monitor.h  serial_event_monitor.cpp  udp_event_monitor.cpp
components/gprs_modem/: CMakeLists.txt  gprs_modem.cpp  gprs_modem.h
components/motion_detector/: CMakeLists.txt  motion_detector.cpp  motion_detector.h
components/server/: CMakeLists.txt  server.cpp  server.h
components/spray_releaser/: CMakeLists.txt  spray_releaser.cpp  spray_releaser.h
doc/: requirements.md
include/: commands.h  common.h  controller.h  credentials.h  events.h
main/: #Kconfig.projbuild  CMakeLists.txt  main.cpp  pir_monitor.cpp  server.cpp
python/: controller.py
